force-app/main/default/objects/Routing_Configuration__mdt/Routing_Configuration__mdt.object-meta.xml
<CustomObject>
    <label>Routing Configuration</label>
    <pluralLabel>Routing Configurations</pluralLabel>
</CustomObject>