force-app/main/default/objects/Routing_Configuration__mdt/fields/Department_Queue__c.field-meta.xml
<CustomField>
    <fullName>Department_Queue__c</fullName>
    <label>Department Queue</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Payment Department</fullName>
                <default>true</default>
                <label>Payment Department</label>
            </value>
            <value>
                <fullName>Customer Support Department</fullName>
            </value>
            <value>
                <fullName>Customer Complaint Department</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>