force-app/main/default/objects/Routing_Configuration__mdt/fields/Queue__c.field-meta.xml
<CustomField>
    <fullName>Queue__c</fullName>
    <label>Queue</label>
    <length>40</length>
    <type>Text</type>
</CustomField>