force-app/main/default/objects/Routing_Configuration__mdt/fields/Routing_English__c.field-meta.xml
<CustomField>
    <fullName>Routing_English__c</fullName>
    <label>Routing English</label>
    <length>50</length>
    <type>Text</type>
</CustomField>