force-app/main/default/objects/Routing_Configuration__mdt/fields/Routing_German__c.field-meta.xml
<CustomField>
    <fullName>Routing_German__c</fullName>
    <label>Routing German</label>
    <length>40</length>
    <type>Text</type>
</CustomField>