force-app/main/default/objects/Routing_Configuration__mdt/fields/Routing_Portuguese__c.field-meta.xml
<CustomField>
    <fullName>Routing_Portuguese__c</fullName>
    <label>Routing Portuguese</label>
    <length>40</length>
    <type>Text</type>
</CustomField>